<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageActivity"
    android:id="@+id/message_page">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/Theme.AppCompat.Light"
        >

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/profilePic"
            app:srcCompat="@mipmap/ic_user_default_round" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:text="test user"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            />

    </androidx.appcompat.widget.Toolbar>



    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/bottom"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="#fff"
        android:id="@+id/bottom"
        android:layout_alignParentBottom="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_send"
            android:background="@android:color/transparent"
            android:hint="Type a message"
            android:layout_toLeftOf="@+id/btn_send"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/btn_send"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_action_send"/>
    </RelativeLayout>

</RelativeLayout>