<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FriendsFragment"
    android:id="@+id/friend_fragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/friend_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/dividerBar"
                android:layout_below="@id/group_list"
                tools:layout_editor_absoluteX="0dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/group_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>