<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightBackground">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Title"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_below="@+id/toolbar"/>

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Meeting title"
        android:layout_below="@id/title"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Description"
        android:textSize="18dp"
        android:layout_below="@+id/edit_title"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Meeting description"
        android:layout_below="@id/description"
        />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Location"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_below="@id/edit_description"/>

    <EditText
        android:id="@+id/edit_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Meeting location"
        android:layout_below="@id/location"
        />

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="Create a Event"
            android:textStyle="bold"
            android:textSize="22dp"/>

    </Toolbar>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="create"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/frequency"
        android:background="@color/lightBackground"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/padd_10"
        />

    <Spinner
        android:spinnerMode="dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frequency"
        android:layout_below="@id/edit_location"
        android:layout_toRightOf="@id/repeat"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Repeat"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_below="@id/edit_location" />



</RelativeLayout>