<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_member"
    android:background="@color/lightBackground">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_user"
        android:hint="Search in friends"
        android:layout_below="@id/toolbar"
        android:padding="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/available_user_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_user"/>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:outlineAmbientShadowColor="@color/browser_actions_bg_grey"
        android:text="ADD"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/available_user_list"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"/>

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="Add member"
            android:textStyle="bold"
            android:textSize="22dp"/>

    </Toolbar>

</RelativeLayout>