...
            android:background="@color/browser_actions_bg_grey">


        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"/>

        <RelativeLayout
            android:layout_width="match_parent"
...
